--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
 <body>
   <main>
     <h1>Vanilla JavaScript App</h1>
+    <p class="tagline">Hii, this is a static Web App</p>
   </main>
 </body>
 
